@@ -20,6 +20,7 @@ Version 2.7.4
 - Fixed backtracking string regexes in JavaScript/TypeScript lexers (#1637)
 - Limit recursion with nesting Ruby heredocs (#1638)
 - Fixed a few inefficient regexes for guessing lexers
+- Fixed the raw token lexer handling of Unicode (#1616)
 
 
 Version 2.7.3
